更新前端文档

--- a/2019-12-13 前端 100607.md
+++ b/2019-12-13 前端 100607.md
@@ -199,7 +199,7 @@ right(int n)
    
    class Singleton
    {
-   	static Singleton intance;
+   	static Singleton instance;
    	Singleton()
    	{
    
@@ -215,11 +215,11 @@ right(int n)
    public:
    	static Singleton& getIntance(void)
    	{
-   		return intance;
+   		return instance;
    	}
    };
    
-   Singleton Singleton::intance;
+   Singleton Singleton::instance;
    ```
 
    - 懒汉模式
@@ -855,7 +855,7 @@ right(int n)
        [&,factor]
        [=,&total]
        lambda表达式的“参数”是在被调用时拷贝，而“被捕获的变量的值”是在lambda表达式创建时拷贝
-       按值捕获，则在lambda创建时值被捕获，后续修改再影响。
+       按值捕获，则在lambda创建时值被捕获，后续修改不再影响。
        按引用捕获，则在lambda创建后到被调用前，捕获变量的改变都会被计算。
    2. () 形参表
    3.  mutable 可以使在按值传递时能够改变传入的值
@@ -923,7 +923,7 @@ right(int n)
    所以符号就是__imp__ShowOpenPDBDlg@4
    ```
 
-4. 名字修饰约定随调用约定和编译种类(C或C++)的不同而变化。函数名修饰约定随编译种类和调用约定
+4. 名字修饰约定随<a name="callingconvention">调用约定</a>和编译种类(C或C++)的不同而变化。函数名修饰约定随编译种类和调用约定
 
    　　的不同而不同，下面分别说明。
 
@@ -1335,6 +1335,26 @@ s 01110011
 
 <a href=https://blog.csdn.net/jirryzhang/article/details/79518408>link</a>
 
+1. static 关键字 变量分配在.data和.bss 。初始化的在.data, 未初始化的在.bss 。.bss段的数据会被初始化为0。
+
+2. bss(全称Block Started by Symbol) 在编译后的目标文件中不占有空间。
+
+3. 栈区的变量是自动变量（Automatic Variables）
+
+4. 静态变量只初始化一次，在全局数据区分配内存，在main()函数前。
+
+5. .Text 段是代码段，存放可执行代码和一些常量（字符串常量就在其中）。静态分配，只读。代码区通常多个进程共享。
+
+6. .data段，也有叫GVAR(global value),静态分配。
+
+   分为读写RW和只读RO。 RO常量，RW非常全局变量。
+
+7. text和data段都是放在可执行文件，bss段由系统初始化。
+
+8. 栈区：主要用来存放局部变量、传递参数、存放函数的返回地址。.esp始终指向栈顶，栈中数据越多，esp的值越小。
+
+9. 函数的栈帧：包含了函数的参数（至于被调用函数的参数是放在调用函数的栈帧还是被调函数的栈帧，则依赖于不同的调用约定，这个和[调用约定](#callingconvention)有关）。函数的栈帧中局部变量以及恢复该函数的主调函数的栈帧（即前一个栈帧）所需要的数据，包含了主调函数的下一条执行指令的地址。
+
 #### 17.减少IO的方式
 
 1. 常规用法
@@ -1406,11 +1426,193 @@ void main(){
    }
    ```
 
-#### 17. 如何使用stackoverflow
+
+
+#### 18. 关于std::function()
+
+1. 关于
+
+   C语言，可以把函数指针作为参数。实现回调
+
+   C++11 标准库引入std::function模板类，这个模板概括了函数指针。
+
+   当调用函数指针，需要定义函数签名（表征该函数入参，返回值等信息）
+
+   创建std::function，也需要函数签名
+
+   ```c++
+   // eg
+   std::function<bool(const std::unique_ptr<Widget>&,
+                     const std::unique_ptr<Widget>&)> func;
+   ```
+
+   lambda表达式产生了一个可调用对象，这个对象称作一个闭包（closure）,可以保存在std::function对象里。
+
+   closure（闭包）的定义是，一个函数和它所引用的非本地变量的一个集合。
+
+2. 使用std::function 作为函数入参
+
+   - 传值
+
+     ```c++
+     #include <functional>
+     void registerCallBack(std::function<void()>);
+     
+     registerCallBack([=]{
+         ... 
+         //回调部分// 
+         })
+     ```
+
+    - 引用
+
+      ```\
+      void registerCallBack(std::function<void()> const&)
+      ```
+
+   - 如果直接调用，引用可能效率更高。如果需要保存，传值没问题，引用需要拷贝一份，否则临时对象销毁时可能引用悬空。
+
+   - 传值对象保存
+
+     如果我们要在registerCallBack函数内部保存这个传入的function对象，我们可以使用转移操作std::move，这样的效率更高，
+
+     ```c++
+     class CallBackHolder
+     {
+         public:
+         void registerCallBack(std::function<void()> func)
+         {
+             callback = std::move(func);
+         }
+         private:
+         std::function<void> callback;
+     }
+     ```
+
+3. 类成员函数作为函数入参
+
+   类成员函数都会有个隐藏的this指针，所以和普通函数的入参不同。
+
+   std::function是通用的多态函数封装器，它的实例可以存储、复制以及调用任何可以调用的目标：函数，lambda表达式/bind表达式或其他函数对象，还有指向成员函数指针和指向数据成员指针；
+   std::bind接受一个函数（或者函数对象），生成一个重新组织的函数对象；
+   看下面一个例子，classA提供了一个注册函数，用来注册一个回调函数
+
+   ```c++
+   class classA
+   {
+   typedef std::function<void(int i)> callback_t;
+   ...
+       void registCb(callback_t func)
+       {cbHandle = std::move(func);}
+   private:
+       callback_t cbHandle;
+   };
+   //另一个类classB需要注册自己的一个成员函数作为回调函数到classA中，这里就可以使用std::bind函数来实现，
+   class classB
+   {
+   public:
+       classB(classA& cA) 
+       {       
+           cA.registCb(std::bind(&classB::handle, this, std::placeholders::_1));
+       }
+   };
+   ```
+
+   - bind函数中显示的传递classB的this指针作为第一个参数给回调函数；
+   - std::placeholders:_1代表一个占位符，用于回调函数显式的入参；
+
+   Effective Modern C++中专门有一节解释过std::bind的方式比较繁琐，并且有时侯会有一些局限性，所以在引入了lambda表达式后就可以用lambda表达式来替代std::bind实现函数回调注册。
+
+   - 使用lambda表达式实现
+
+     使用lambda表达式的方式可以简化这一个过程，参看如下一段代码，classB注册一个成员函数作为回调函数到classA中，classA会保存这个回调函数（std::function对象）到成员变量中，用于后面使用，
+
+     ```c++
+     #include <iostream>
+     #include <functional>
+     #include <memory>
+      
+     class classA
+     {
+     typedef std::function<void(int i)> callback_t;
+      
+     public:
+         classA() {}
+         ~classA() {}
+         
+         void handle(int i)
+         {
+             std::cout << "classA::handle" << std::endl;
+             
+             cbHandle(i);
+         }
+      
+         void registCb(callback_t func)
+         {cbHandle = std::move(func);}
+     private:
+         callback_t cbHandle;
+     };
+      
+     class classB
+     {
+     public:
+         classB(classA& cA) 
+         {       
+             cA.registCb([this](int i){classB::handle(i);});
+         }
+         ~classB() {}
+         
+         void handle(int i)
+         {
+             std::cout << "classB, handle message" << i << std::endl;
+         }
+     };
+      
+     int main()
+     {
+         classA testa;
+         classB testb(testa);
+      
+         testa.handle(10);
+     }
+     //lambda表达式中捕获了classB的this指针
+     //使用std::move的方式保存function对象到classA中
+     ```
+
+     
+
+
+
+#### 19. 观察者模式
+
+```c++
+class MySlot
+{
+    public：
+        void operator()()const
+    {
+        std::cout<<"MySlot called！"<<std::endl;
+    }
+}
+
+MySlot slot;
+
+boost::signal<void()>signal;
+
+signal.connect(slot);
+
+signal();
+```
+
+#### 20. 虚基类
+
+​	
+
+####  如何使用stackoverflow
 
 ​	<a href=https://blog.csdn.net/weixin_38233274/article/details/80349534>link</a>
 
-### 18. C++问题
+## C++问题
 
 1. 什么是流，存在哪些类型的流
 
@@ -1500,6 +1702,12 @@ void main(){
     const放在参数表之后就成为函数签名的一部分。从而保证此函数不会改变猪对象的状态。原理就是在this指针前加了一个const。this指针就是指向const的指针。
 
     指定mutable的成员变量可以在const成员函数中修改。
+
+12. 构造函数，赋值函数，复制构造函数的区别。
+
+    
+
+
 
 ***
 
@@ -1964,4 +2172,36 @@ add_executable(Demo main.cc)
    greaterThan(QT_MAJOR_VERSION, 4): QT += widgets
    ```
 
-   
+
+## 算法
+
+### 1. 二叉树
+
+1. 二叉树线索化
+
+```c
+void midThread(TTNode *root)
+{
+    static TTNode *pre = NULL;
+    if(NULL != root)
+    {
+        midThread(root->LChild);
+        if(NULL != pre && 1 == pre->RTag)
+            root->RChild = root;
+        if(NULL == root->LChild)
+        {
+            root->LTag = 1;
+            root->LChild = pre;
+        }
+        if(NULL == root->RChild)
+        {
+            root->RTag = 1;
+        }
+        pre = root;
+        midThread(root->RChild);
+    }
+}
+```
+
+
+
